--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "npm-package",
+    "name": "@naxos/core",
     "repository": {
         "type": "git",
         "url": "https://github.com/joeythelantern/Component-Library.git"
     },
-    "version": "0.0.1",
+    "version": "1.0.0",
     "description": "",
     "main": "dist/cjs/index.js",
     "module": "dist/index.js",
@@ -15,7 +15,7 @@
     "scripts": {
         "dev": "parcel example/index.html --dist-dir ./node_modules/.percel-server --cache-dir ./node_modules/.percel-server/cache",
         "watch": "rm -rf dist/ && tsc --watch",
-        "build": "rm -rf dist/ && prettier --write src/ && tsc",
+        "build": "rm -rf dist/ && prettier --write src/ && tsc --outDir dist",
         "build:cjs": "npm run build && tsc --module CommonJS --outDir dist/cjs",
         "prepare": "npm run build"
     },
@@ -25,13 +25,26 @@
         "@types/node": "^17.0.33",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
+        "parcel": "^2.5.0",
         "prettier": "2.6.2",
-        "typescript": "^4.6.4",
-        "parcel": "^2.5.0"
+        "process": "^0.11.10",
+        "typescript": "^4.6.4"
     },
     "dependencies": {
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.7.0",
+        "@mui/styles": "^5.3.0",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.3",
+        "fmotion-variants": "^0.1.2",
+        "framer-motion": "^6.2.8",
+        "mui-themex": "^1.1.4",
         "react": "^18.1.0",
-        "react-dom": "^18.1.0"
+        "react-browser-scrollbar": "^1.1.4",
+        "react-dom": "^18.1.0",
+        "state-range": "^1.7.1",
+        "tiny-utils": "^1.0.1"
     }
 }
