--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,17 +14,28 @@
         "types": [
             "node"
         ],
-        "module": "es2015",
+        // "module": "es2015",
         "moduleResolution": "node",
         "noImplicitAny": true,
         "noUnusedLocals": true,
         "outDir": "dist",
         "sourceMap": true,
         "strict": true,
-        "target": "es6"
+        "target": "es6",
+        "module": "esnext",
+        // "lib": [
+        //     "dom",
+        //     "esnext"
+        // ],
+        "importHelpers": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUnusedParameters": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
     "include": [
         "src/**/*.ts",
         "src/**/*.tsx"
-    ]
+    ],
 }
