--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-    "name": "@naxos/core",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/joeythelantern/Component-Library.git"
-    },
+    "name": "naxos-core",
     "version": "1.0.0",
-    "description": "",
     "main": "dist/cjs/index.js",
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
@@ -15,7 +10,7 @@
     "scripts": {
         "dev": "parcel example/index.html --dist-dir ./node_modules/.percel-server --cache-dir ./node_modules/.percel-server/cache",
         "watch": "rm -rf dist/ && tsc --watch",
-        "build": "rm -rf dist/ && prettier --write src/ && tsc --outDir dist",
+        "build": "rm -rf dist/ && prettier --write src/ && tsc",
         "build:cjs": "npm run build && tsc --module CommonJS --outDir dist/cjs",
         "prepare": "npm run build"
     },
@@ -27,7 +22,6 @@
         "@types/react-dom": "^18.0.4",
         "parcel": "^2.5.0",
         "prettier": "2.6.2",
-        "process": "^0.11.10",
         "typescript": "^4.6.4"
     },
     "dependencies": {
