--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "naxos-core",
     "version": "1.0.0",
-    "main": "dist/cjs/index.js",
-    "module": "dist/index.js",
-    "typings": "dist/index.d.ts",
+    "main": "libs/cjs/index.js",
+    "module": "libs/index.js",
+    "typings": "libs/index.d.ts",
     "files": [
-        "dist"
+        "libs"
     ],
     "scripts": {
-        "dev": "parcel example/index.html --dist-dir ./node_modules/.percel-server --cache-dir ./node_modules/.percel-server/cache",
-        "watch": "rm -rf dist/ && tsc --watch",
-        "build": "rm -rf dist/ && prettier --write src/ && tsc",
-        "build:cjs": "npm run build && tsc --module CommonJS --outDir dist/cjs",
+        "start": "parcel example/index.html --dist-dir ./node_modules/.percel-server --cache-dir ./node_modules/.percel-server/cache",
+        "watch": "rm -rf libs/ && tsc --watch",
+        "build": "rm -rf libs/ && prettier --write src/ && tsc",
+        "build:cjs": "npm run build && tsc --module CommonJS --outDir libs/cjs",
         "prepare": "npm run build"
     },
     "author": "Naxrul Ahmed",
