--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "moduleResolution": "node",
         "noImplicitAny": true,
         "noUnusedLocals": true,
-        "outDir": "dist",
+        "outDir": "libs",
         "sourceMap": true,
         "strict": true,
         "target": "es6",
