--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "naxos-core",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "main": "libs/cjs/index.js",
     "module": "libs/index.js",
     "typings": "libs/index.d.ts",
@@ -22,6 +22,7 @@
         "@types/react-dom": "^18.0.4",
         "parcel": "^2.5.0",
         "prettier": "2.6.2",
+        "process": "^0.11.10",
         "typescript": "^4.6.4"
     },
     "dependencies": {
@@ -38,7 +39,7 @@
         "react": "^18.1.0",
         "react-browser-scrollbar": "^1.1.4",
         "react-dom": "^18.1.0",
-        "state-range": "^1.8.2",
+        "state-range": "^1.8.3",
         "tiny-utils": "^1.0.1"
     }
 }
