--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "author": "Naxrul Ahmed",
     "license": "MIT",
     "devDependencies": {
+        "@types/is-hotkey": "^0.1.7",
         "@types/node": "^17.0.33",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
@@ -36,6 +37,7 @@
         "@types/react-dom": "^18.0.3",
         "fmotion-variants": "^0.1.2",
         "framer-motion": "^6.2.8",
+        "is-hotkey": "^0.2.0",
         "mui-themex": "^1.1.4",
         "react": "^18.1.0",
         "react-browser-scrollbar": "^1.1.5",
