--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "@mui/styles": "^5.3.0",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.3",
-        "fmotion-variants": "^0.1.2",
         "framer-motion": "^6.2.8",
         "is-hotkey": "^0.2.0",
         "mui-themex": "^1.1.6",
@@ -42,6 +41,7 @@
         "react-browser-scrollbar": "^1.1.5",
         "react-dom": "^18.1.0",
         "state-range": "^2.0.4",
+        "timer-action": "^1.0.1",
         "tiny-utils": "^1.0.1"
     }
 }
