--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react": "^18.1.0",
         "react-browser-scrollbar": "^1.1.5",
         "react-dom": "^18.1.0",
+        "react-validex": "^1.1.3",
         "state-range": "^2.0.4",
         "timer-action": "^1.0.1",
         "tiny-utils": "^1.0.1"
