--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.7.0",
         "@mui/styles": "^5.3.0",
+        "@mui/x-date-pickers": "^5.0.0-beta.4",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.3",
         "framer-motion": "^6.2.8",
