Working on Card

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react": "^18.1.0",
         "react-browser-scrollbar": "^1.1.5",
         "react-dom": "^18.1.0",
+        "react-ribbons": "^1.0.6",
         "react-validex": "^1.1.3",
         "state-range": "^2.0.4",
         "timer-action": "^1.0.1",
