--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/is-hotkey": "^0.1.7",
         "@types/node": "^17.0.33",
         "@types/react": "^18.0.9",
+        "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^18.0.4",
         "parcel": "^2.5.0",
         "prettier": "2.6.2",
@@ -41,6 +42,7 @@
         "moment": "^2.29.4",
         "mui-themex": "^1.1.6",
         "react": "^18.1.0",
+        "react-beautiful-dnd": "^13.1.0",
         "react-browser-scrollbar": "^1.1.5",
         "react-dom": "^18.1.0",
         "react-ribbons": "^1.0.6",
