--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "naxos-core",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "main": "libs/cjs/index.js",
     "module": "libs/index.js",
     "typings": "libs/index.d.ts",
@@ -39,6 +39,7 @@
         "fmotion-variants": "^0.1.2",
         "framer-motion": "^6.2.8",
         "is-hotkey": "^0.2.0",
+        "js-video-url-parser": "^0.5.1",
         "moment": "^2.29.4",
         "mui-themex": "^1.1.6",
         "react": "^18.1.0",
@@ -48,7 +49,9 @@
         "react-ribbons": "^1.0.6",
         "react-validex": "^1.1.3",
         "state-range": "^2.0.4",
+        "suneditor-react": "^3.4.1",
         "timer-action": "^1.0.1",
-        "tiny-utils": "^1.0.1"
+        "tiny-utils": "^1.0.1",
+        "yarn": "^1.22.19"
     }
 }
