--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^18.0.9",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^18.0.4",
+        "@types/react-file-icon": "^1.0.1",
         "parcel": "^2.5.0",
         "prettier": "2.6.2",
         "process": "^0.11.10",
@@ -45,6 +46,8 @@
         "react": "^18.1.0",
         "react-browser-scrollbar": "^1.1.5",
         "react-dom": "^18.1.0",
+        "react-dropzone": "^14.2.3",
+        "react-file-icon": "^1.2.0",
         "state-range": "^2.0.4",
         "suneditor-react": "^3.4.1",
         "timer-action": "^1.0.1",
