--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "^18.0.4",
         "@types/react-file-icon": "^1.0.1",
+        "buffer": "^6.0.3",
         "parcel": "^2.5.0",
         "prettier": "2.6.2",
         "process": "^0.11.10",
